[package]
name = "epub-font-obfuscator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
eyre = "0.6.8"
lazy_static = "1.4.0"
regex = "1.7.1"
sha = "1.0.3"
